# modCAM

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  pytest.ini  vcpkg-configuration.json  vcpkg.json  version.h.in
.github/workflows/: ci-caller.yml  ci.yml  create-release.yml  update_version.yml
cmake/: CMakeRC.cmake  modcam_dependencies.cmake  modcam_version.cmake
data/: CMakeLists.txt  SourceList.cmake
data/mesh/: SourceList.cmake
docs/: CMakeLists.txt  modCAM.bib
docs/algorithms/: plot_stl.py  python_libraries
docs/algorithms/curvature/: Rusinkiewicz2004.ipynb
docs/algorithms/mesh/: principal_curvature_Rusinkiewicz2004.ipynb
documentation/algorithms/curvature/: Rusinkiewicz2004.ipynb
documentation/algorithms/data/: LICENSE.md
include/mesh/: mesh.h  voronoi_area.h
include/modcam/: modcam_version.h
include/modcam/mesh/: curvature.h  per_vertex_basis.h  per_vertex_normals.h  principal_curvature.h  voronoi_area.h
packaging/: CMakeLists.txt  modCAMConfig.cmake
src/: CMakeLists.txt  bind_modcam.cpp
src/mesh/: SourceList.cmake  bind_mesh.cpp  voronoi_area.cpp
src/modcam/: SourceList.cmake  modcam.h  modcam_version.cpp.in
src/modcam/mesh/: CMakeLists.txt  SourceList.cmake  curvature.cpp  curvature.test.cpp  mesh.h  per_vertex_basis.cpp  per_vertex_basis.test.cpp  per_vertex_normals.cpp  per_vertex_normals.test.cpp  principal_curvature.cpp  principal_curvature.test.cpp  voronoi_area.cpp  voronoi_area.test.cpp
src/modcam/utility/: CMakeLists.txt  SourceList.cmake  modulus.h  random_orthonormal.cpp  random_orthonormal.h
src/py_modcam/: SourceList.cmake  bind_mesh.cpp  bind_modcam.cpp
tests/: CMakeLists.txt  doctest_config.h.in  run_tests.cpp  test.py
tests/python/mesh/: test_per_vertex_basis.py  test_per_vertex_normals.py  test_principal_curvature.py  test_voronoi_area.py
